--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "animenepal",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://myanimelist.net",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
